--- a/app/package.json
+++ b/app/package.json
@@ -2,10 +2,10 @@
   "name": "app",
   "version": "1.0.0",
   "description": "Ingresos de reportes de mantenimiento",
-  "type":"module",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "start":"node index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,6 +14,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "mysql2": "^3.9.3"
+    "mysql2": "^3.9.3",
+    "nodemon": "^3.1.0"
   }
 }
